<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".SecondActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_screen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"/>


    <Button
        android:id="@+id/truebutton"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginVertical="48dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="#009688"
        android:text="@string/true_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/falsebutton"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@id/answerTextView"
        app:layout_constraintTop_toBottomOf="@id/answerTextView" />

    <Button
        android:id="@+id/falsebutton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="160dp"
        android:background="#009688"
        android:text="@string/false_button"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nextbutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/truebutton"
        app:layout_constraintTop_toBottomOf="@+id/questionCounter" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/answer"
        android:textColor="#263238"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionCounter" />

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#009688"
        android:text="@string/next_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/questionCounter"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="255dp"
        android:text="@string/questionCounter"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1 / 5" />

</androidx.constraintlayout.widget.ConstraintLayout>